src/test/test-models/bad/data_index/non_data_index3.stan
parameters {
  real y[3];

}
transformed parameters {
  row_vector[size(y)] z;
}
